# thundercat

./: .gitignore  .gitmodules  Makefile  README.md  codeEmitter.h  csrByNZ.cpp  csrByNZAnalyzer.h  genOski.cpp  genOskiAnalyzer.h  main.cpp  matrix.cpp  method.cpp  method.h  spMVgen.cpp  spMVgen.h  stencil.cpp  stencilAnalyzer.cpp  stencilAnalyzer.h  svmAnalyzer.h  unfolding.cpp  unfoldingAnalyzer.h  unrollingWithGOTO.cpp
modules/: FindMKL.cmake
plots/: large_set.mat  plot_the_set.m  small_set.mat
results/: srlpi-ARM.xlsx  srlpi3-ARM.xlsx
scratchpad/restrict-keyword/: NOTES.txt  duffsdevice.c  duffsdevice_restrict.c  plainCSR.c  plainCSR4.c  plainCSR4_restrict.c  plainCSR_noTempVar.c  plainCSR_noTempVar_restrict.c  plainCSR_restrict.c
scratchpad/restrict-keyword/clang/: duffsdevice_const.s  plainCSR.s  plainCSR4.s  plainCSR_noTempVar.s  plainCSR_noTempVar_restrict.s
scratchpad/restrict-keyword/icc/: duffsdevice.s  duffsdevice_const.s  duffsdevice_restrict.s  plainCSR.s  plainCSR4.s  plainCSR4_restrict.s  plainCSR_noTempVar.s  plainCSR_noTempVar_restrict.s  plainCSR_restrict.s
scratchpad/unrolling/: NOTES.txt  plainCSR4_4.c
scripts/: README.md  llvm_350_thundercat_patch.diff  llvm_370_spMVlib_patch.diff  setup_llvm.sh
src/: CMakeLists.txt  codeEmitter.h  csr5.cpp  csr5.hpp  csr5avx2.cpp  csr5avx2.hpp  csr5avx512.cpp  csr5avx512.hpp  csrByNZ.cpp  csrByNZAnalyzer.cpp  csrLenWithGOTO.cpp  csrWithGOTO.cpp  csrWithGOTOAnalyzer.cpp  csrWithGOTOAnalyzer.h  cusp.cpp  cusp.hpp  cuspAdapter.cu  cuspAdapter.hu  cusparse.cpp  cusparse.cu  cusparse.hpp  cusparseAdaptor.cu  cusparseAdaptor.hu  cusparseSpmvWrapper.cu  cusparseSpmvWrapper.hu  duffsDevice.cpp  duffsDeviceCSRDD.cpp  duffsDeviceCSRDD.hpp  duffsDeviceCompressed.cpp  duffsDeviceCompressed.hpp  duffsDeviceLCSR.cpp  genOski.cpp  genOskiAnalyzer.cpp  genOskiAnalyzer.h  incrementalCSR.cpp  incrementalCSR.hpp  main.cpp  main2.cpp  matrix.cpp  matrix.h  (+36 more)
tests/: runTests.py
tests/correctOutputs/: add32b.out  fidap005b.out  memplusb.out
tools/: README.md  collectAllGenerationCosts.sh  collectGenerationCosts.sh  collectSVMAnalysisTimes.sh  collectSpMVlibFileSizes.sh  collectSpMVlibMatrixPrepTimes.sh  compareSpMVlibAndPython.sh  compareSpMVlibAndSpMVlib.sh  compilePythonGeneratedCodes.sh  driver.c  driver10.c  driver11.c  driver12.c  driver2.c  driver3.c  driver4.c  driver5.c  driver6.c  driver7.c  driver8.c  driver9.c  findIndexOfMin.py  findMinTiming.py  genSpMVlibDebugOutput.sh  genSpMVlibObjects.sh  generateMethodFolders.sh  getMatrixStats.sh  main-debug.c  main.c  makeCSVForPythonGeneratedCodes.sh  makeCSVForSpMVlibGeneratedCodes.sh  matrixNames600.txt  matrixNames_10K-200M_noncomplex.txt  matrixNames_10K-200M_noncomplex_nonsym.txt  matrixNames_249.txt  matrixNames_2746.txt  matrixNames_99.txt  matrixNames_all.txt  matrixNames_csr5.txt  matrixNames_duff.txt  (+17 more)
